# Eshop-Services-Smartphones

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.pip  Dockerfile.uv  MODELOS_COMPLETADOS.md  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  implementacion_favoritos_testimonios.md  informe_tecnico.md  main.py  pyproject.toml  requirements.txt  tailwind.config.js
apps/admin/: forms.py  urls.py  views.py
apps/orders/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
apps/pages/: admin.py  models.py  urls.py  views.py
apps/payment/: context_processors.py  models.py  services.py  urls.py  views.py
apps/products/: admin.py  apps.py  models.py  urls.py  views.py
apps/social/: admin.py  models.py
apps/users/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
core/: jazzmin_ui.py  settings.py  urls.py
static/css/: styles.css  tailwind.css
static/js/: auth.js  cart.js  checkout.js  contact.js  details.js  favorites.js  home.js  notifications.js  profile.js  theme.js  theme_toggle.js
templates/: 404.html  500.html  base.html  robots.txt
templates/account/: login.html  logout.html  password_reset.html  signup.html
templates/admin/: admin_about.html  admin_banners.html  admin_categories.html  admin_media.html  admin_order_detail.html  admin_orders.html  admin_products.html  admin_social.html  admin_testimonials.html  admin_users.html  base_admin.html  dashboard.html
templates/components/: admin_sidebar.html  (+5 more)
tests/: diagnose_oauth.py
workspace/: auth.md
(+31 files in other folders)
